# cuda_exercise

./: CMakeLists.txt
src/: 01_hello_world  01_hello_world.cu  02_add_float_array_cpu.c  03_add_float_array_gpu.cu  04_add_matrix.cu
